--- a/samples/examples/simple-provider.html
+++ b/samples/examples/simple-provider.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="leftContainer">
         <p id="WelcomeMessage">Welcome to the Microsoft Authentication Library For Javascript Quickstart</p>
-        <button id="SignIn" onclick="signIn()">Sign In</button>
+        <button id="SignIn">Sign In</button>
+        <button id="SignOut" hidden>Sign Out</button>
       </div>
       <div class="rightContainer">
         <pre id="json"></pre>
@@ -50,6 +51,10 @@
       // Register Callbacks for redirect flow
       // myMSALObj.handleRedirectCallbacks(acquireTokenRedirectCallBack, acquireTokenErrorRedirectCallBack);
       myMSALObj.handleRedirectCallback(authRedirectCallBack);
+      //Set login button
+      var loginbutton = document.getElementById('SignIn');
+      loginbutton.removeAttribute('hidden');
+      loginbutton.addEventListener('click', signIn, true);
 
       Providers.globalProvider = new SimpleProvider(async function(scopes) {
         var request = { scopes: scopes };
@@ -126,9 +131,13 @@
 
         var divWelcome = document.getElementById('WelcomeMessage');
         divWelcome.innerHTML = 'Welcome ' + myMSALObj.getAccount().userName + ' to Microsoft Graph API';
+
+        //Toggle login and logout buttons
+        var logoutbutton = document.getElementById('SignOut');
+        logoutbutton.removeAttribute('hidden');
+        logoutbutton.addEventListener('click', signOut, true);
         var loginbutton = document.getElementById('SignIn');
-        loginbutton.innerHTML = 'Sign Out';
-        loginbutton.setAttribute('onclick', 'signOut();');
+        loginbutton.setAttribute('hidden', true);
       }
 
       //This function can be removed if you do not need to support IE
