--- a/samples/electron-app/index.html
+++ b/samples/electron-app/index.html
@@ -13,8 +13,6 @@
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
     <mgt-todo></mgt-todo>
-    <script>
-      require('./dist/renderer.js');
-    </script>
+    <script type="module" src="./dist/renderer.js"></script>
   </body>
 </html>
