--- a/samples/examples/file.html
+++ b/samples/examples/file.html
@@ -66,8 +66,7 @@
     <p>insight-type + insight-id: </p>
     <mgt-file insight-type="shared" insight-id="AW1GxMvkOztMkJX-SCppUSRPF5EvyPDHRZVAqtQZXI4JoUXwI9_mfEWNlabr1f7aXRBWDMt2C2FDop4fP1vsUw9tRsTL5Ds7TJCV_kgqaVEkBA"></mgt-file>
 
-    <p>user-id + insight-type + insight-id: Not sure why this is not working</p>
-    <!-- https://graph.microsoft.com/v1.0/users/e3d0513b-449e-4198-ba6f-bd97ae7cae85/insights/used/ATUGb_bBy5VGjCXXbCC1-IO8Uw3a0f7dRLWSy6dsQqnuxuFB60wgokCzK2CTizdAAFKDHtbA1h5NjZJhNlwQN0c1Bm_2wcuVRowl12wgtfiDBA/resource -->
+    <p>user-id + insight-type + insight-id:</p>
     <mgt-file user-id="e3d0513b-449e-4198-ba6f-bd97ae7cae85" insight-type="used" insight-id="ATUGb_bBy5VGjCXXbCC1-IO8Uw3a0f7dRLWSy6dsQqnuxuFB60wgokCzK2CTizdAAFKDHtbA1h5NjZJhNlwQN0c1Bm_2wcuVRowl12wgtfiDBA"></mgt-file>
 
      
