--- a/index.html
+++ b/index.html
@@ -20,21 +20,24 @@
     <!-- <mgt-teams-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       auth-popup-url="auth.html"
-    ></mgt-teams-provider>
+    ></mgt-teams-provider> -->
 
-    <mgt-msal-provider
+    <!-- <mgt-msal-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
       redirect-uri="http://localhost:3000"
       depends-on="mgt-teams-provider"
     ></mgt-msal-provider> -->
+
     <!-- <mgt-msal2-provider
       client-id="2dfea037-938a-4ed8-9b35-c05708a1b241"
       multi-account-disabled
       redirect-uri="http://localhost:3000"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
     ></mgt-msal2-provider> -->
+
     <mgt-mock-provider></mgt-mock-provider>
+
     <mgt-login></mgt-login>
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
     <mgt-people-picker></mgt-people-picker>
