--- a/samples/teams-sso-node/client/auth.html
+++ b/samples/teams-sso-node/client/auth.html
@@ -4,7 +4,7 @@
   <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
   <script src="./mgt/mgt-loader.js"></script>
   <script>
-    mgt.Teams2Provider.handleAuth();
+    mgt.TeamsSSOProvider.handleAuth();
   </script>
 </head>
 
