msal2 multi-account UI (#1041)
* Added electron app

* delete

* Added electron sample folder

* Added electron sample folder

* Added electron sample folder

* added electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Update README.md

* Added license

* Cleaned up license

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update samples/electron-app/package.json

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Review comments & removed cache plugin

* Update packages/providers/mgt-electron-provider/src/Authenticator/CustomFileProtocol.ts

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Changed initialization of ElectronAuthenticator

* updated sample readme

* Update README.md

* Removed all evidence of incremental consent support :P

* Warning

* MSAL2.0

* msal2 silent

* Added msal2 custom element and sso

* SSO fix

* Added event on account switch

* Fixed issue with setActiveAccount related to latest msal-browser package

* Bumped up package version

* temp fix

* Single account

* Added new test file

* Update msal2-provider-test.html

* Single account changes

* Comments

* Added msal2.0 provider to index.html

* Added msal2.0 provider to index.html

* enabled multi account

* handle account changes in providers namespace

* Comments

* Revert "enabled multi account"

This reverts commit 7f945280a5ea193575e40859b3c09b4cac06608d.

* fixed binding issue

* cleanup

* fixed when unsubscr

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- <script src="./packages/mgt/dist/bundle/mgt-loader.js"></script> -->
 
     <script type="module" src="./packages/mgt/dist/es6/index.js"></script>
+    <script type="module">
+      import { CacheService } from './packages/mgt/dist/es6';
+      CacheService.cacheConfig.isEnabled = false;
+    </script>
   </head>
 
   <body>
@@ -29,13 +33,13 @@
       depends-on="mgt-teams-provider"
     ></mgt-msal-provider> -->
 
-    <!-- <mgt-msal2-provider
+    <mgt-msal2-provider
       client-id="2dfea037-938a-4ed8-9b35-c05708a1b241"
       redirect-uri="http://localhost:3000"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
-    ></mgt-msal2-provider> -->
+    ></mgt-msal2-provider>
 
-    <mgt-mock-provider></mgt-mock-provider>
+    <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
