Remove unnecessary allow-any-email property

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <mgt-login></mgt-login>
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
     <br />
-    <mgt-people-picker allow-any-email></mgt-people-picker>
+    <mgt-people-picker></mgt-people-picker>
     <mgt-people-picker></mgt-people-picker>
     <br />
     <mgt-teams-channel-picker></mgt-teams-channel-picker>
