Included sample mgt-file-list with extension mgt-file-upload

--- a/index.html
+++ b/index.html
@@ -18,22 +18,20 @@
 
   <body>
     <!-- <mgt-teams-provider
-      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-      auth-popup-url="auth.html"
-    ></mgt-teams-provider> -->
-
+    client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
+    auth-popup-url="auth.html"
+  ></mgt-teams-provider> -->
     <!-- <mgt-msal-provider
-      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-      scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
-      redirect-uri="http://localhost:3000"
-      depends-on="mgt-teams-provider"
-    ></mgt-msal-provider> -->
-
+    client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
+    scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read,files.readwrite"
+    redirect-uri="http://localhost:3000"
+    depends-on="mgt-teams-provider"
+  ></mgt-msal-provider> -->
     <!-- <mgt-msal2-provider
-      client-id="2dfea037-938a-4ed8-9b35-c05708a1b241"
-      redirect-uri="http://localhost:3000"
-      scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
-    ></mgt-msal2-provider> -->
+    client-id="2dfea037-938a-4ed8-9b35-c05708a1b241"
+    redirect-uri="http://localhost:3000"
+    scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read,files.readwrite"
+  ></mgt-msal2-provider> -->
 
     <mgt-mock-provider></mgt-mock-provider>
 
@@ -45,5 +43,6 @@
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
     <mgt-todo></mgt-todo>
+    <mgt-file-list enable-file-upload></mgt-file-list>
   </body>
 </html>
