Updated Dark Theme Update upload to create new if already exist

--- a/samples/examples/file-upload.html
+++ b/samples/examples/file-upload.html
@@ -10,8 +10,6 @@
       --file-upload-border: 4px dotted #ffbdc3;
       --file-upload-background-color: rgba(255, 0, 0, 0.1);
       --file-upload-button-float: left;
-      --file-upload-progress-background-color: #fef8dd;
-      --file-upload-progressbar-background-color: gray;
       --file-upload-button-color: #323130;
       --file-upload-button-background-color: #fef8dd;
       --file-list-background-color: #e0f8db;
@@ -57,6 +55,9 @@
 
   <p>Custom CSS included by class name:</p>
   <mgt-file-list class="custom-mgt-file-list" enable-file-upload></mgt-file-list>
+
+  <p>Dark CSS in class name:</p>
+  <mgt-file-list class="mgt-dark" enable-file-upload></mgt-file-list>
 
   <!--
   <h2>To test other locations, replace parameters values with existing ones</h2>
