Update Dialog with Dark Theme.

--- a/samples/examples/file-upload.html
+++ b/samples/examples/file-upload.html
@@ -12,6 +12,9 @@
       --file-upload-button-float: left;
       --file-upload-button-color: #323130;
       --file-upload-button-background-color: #fef8dd;
+      --file-upload-dialog-content-background-color: #ffe7c7;
+      --file-upload-dialog-primarybutton-background-color: #ffe7c7;
+      --file-upload-dialog-primarybutton-color: #323130;
       --file-list-background-color: #e0f8db;
       --file-item-background-color--hover: #caf1de;
       --file-item-background-color--active: #acddde;
