Renamed teams-sso-provider to teams-msal2-provider

--- a/auth.html
+++ b/auth.html
@@ -9,8 +9,8 @@
       // import { TeamsProvider } from './packages/providers/mgt-teams-provider/dist/es6/TeamsProvider.js';
       // TeamsProvider.handleAuth();
 
-      import { TeamsSSOProvider } from './packages/providers/mgt-teams-sso-provider/dist/es6/TeamsSSOProvider.js';
-      TeamsSSOProvider.handleAuth();
+      import { TeamsMsal2Provider } from './packages/providers/mgt-teams-msal2-provider/dist/es6/TeamsMsal2Provider.js';
+      TeamsMsal2Provider.handleAuth();
     </script>
   </head>
   <body>
