hides shortcut button

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -25,6 +25,10 @@
     height: calc(100% - 40px);
   }
 
+  .sidebar-header button {
+    display: none !important;
+  }
+
   .storybook-footer {
     position: absolute;
     bottom: 0;
