--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -17,6 +17,15 @@
     }
   };
   awa.init(config);
+
+  window.onload = () => {
+    // This is a fix for an accessibility issue: https://github.com/microsoftgraph/microsoft-graph-toolkit/issues/1085
+    const sidebarHeader = document.getElementsByClassName('sidebar-header')[0];
+    sidebarHeader.innerHTML = '<h1 tabindex="0" class="css-1su1ft1">' + '<a href="https://aka.ms/mgt" target="_blank" class="css-ixbm00">' +
+      'Microsoft Graph Toolkit Playground</a>' +
+      '</h1>';
+  }
+
 </script>
 
 <style>
@@ -54,3 +63,5 @@
     }
   }
 </style>
+
+
