uses correct key for spacebar

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
     <mgt-mock-provider></mgt-mock-provider>
 
-    <mgt-login></mgt-login>
-    <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
-    <mgt-people-picker></mgt-people-picker>
-    <mgt-teams-channel-picker></mgt-teams-channel-picker>
-    <mgt-tasks></mgt-tasks>
-    <mgt-agenda group-by-day></mgt-agenda>
-    <mgt-people show-presence></mgt-people>
+<!--    <mgt-login></mgt-login>-->
+<!--    <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>-->
+<!--    <mgt-people-picker></mgt-people-picker>-->
+<!--    <mgt-teams-channel-picker></mgt-teams-channel-picker>-->
+<!--    <mgt-tasks></mgt-tasks>-->
+<!--    <mgt-agenda group-by-day></mgt-agenda>-->
+<!--    <mgt-people show-presence></mgt-people>-->
     <mgt-todo></mgt-todo>
   </body>
 </html>
