fixes focus order

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,8 +1,8 @@
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-<footer class="storybook-footer">
+<footer class="storybook-footer" >
   Microsoft Graph Toolkit Playground was founded by Microsoft as a community guided, open source project.
-  <a href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
-  <a href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
+  <a tabindex='-1' href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
+  <a tabindex='-1' href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
 </footer>
 
 <script src="https://consentdeliveryfd.azurefd.net/mscc/lib/v2/wcp-consent.js"></script>
@@ -56,6 +56,15 @@
   .storybook-footer a:hover {
     color: #323232;
   }
+
+  /*.sidebar-item.selected {*/
+  /*  background: #0360B9 !important;*/
+  /*}*/
+
+  /*.sidebar-item.css-3qjlvf {*/
+  /*  color: #717171 !important;*/
+  /*}*/
+
 
   @media (max-width: 768px) {
     #root > div:first-of-type {
