updates storybook theme

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -48,6 +48,10 @@
     color: #323232;
   }
 
+  .sidebar-subheading.css-ulso1l {
+    color: #717171 !important;
+  }
+
   @media (max-width: 768px) {
     #root > div:first-of-type {
       height: calc(100% - 50px);
