--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,8 +1,8 @@
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-<footer class="storybook-footer">
+<footer class="storybook-footer" >
   Microsoft Graph Toolkit Playground was founded by Microsoft as a community guided, open source project.
-  <a href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
-  <a href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
+  <a tabindex='-1' href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
+  <a tabindex='-1' href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
 </footer>
 
 <script src="https://consentdeliveryfd.azurefd.net/mscc/lib/v2/wcp-consent.js"></script>
@@ -17,6 +17,15 @@
     }
   };
   awa.init(config);
+
+  window.onload = () => {
+    // This is a fix for an accessibility issue: https://github.com/microsoftgraph/microsoft-graph-toolkit/issues/1085
+    const sidebarHeader = document.getElementsByClassName('sidebar-header')[0];
+    sidebarHeader.innerHTML = '<h1 tabindex="0" class="css-1su1ft1">' + '<a href="https://aka.ms/mgt" target="_blank" class="css-ixbm00">' +
+      'Microsoft Graph Toolkit Playground</a>' +
+      '</h1>';
+  }
+
 </script>
 
 <style>
@@ -58,3 +67,5 @@
     }
   }
 </style>
+
+
