fixes h1 tag styling

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -66,6 +66,24 @@
       height: calc(100% - 50px);
     }
   }
+
+  .sidebar-header h1 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-right: 10px;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    min-height: 28px;
+  }
+
+  .sidebar-header a {
+    text-decoration: none;
+    color: inherit;
+  }
 </style>
 
 
