WIP: display the files in the dropdown

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <!-- <script src="./packages/mgt/dist/bundle/mgt-loader.js"></script> -->
 
     <script type="module" src="./packages/mgt/dist/es6/index.js"></script>
+    <style>
+      body{
+        padding: 5%;
+      }
+    </style>
   </head>
 
   <body>
@@ -51,14 +56,15 @@
     ></mgt-msal2-provider> -->
 
     <mgt-mock-provider></mgt-mock-provider>
+    <mgt-generic-picker entity-types="file-list"></mgt-generic-picker>
 
-    <mgt-login></mgt-login>
+    <!-- <mgt-login></mgt-login>
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
     <mgt-people-picker></mgt-people-picker>
     <mgt-teams-channel-picker></mgt-teams-channel-picker>
     <mgt-tasks></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
-    <mgt-todo></mgt-todo>
+    <mgt-todo></mgt-todo> -->
   </body>
 </html>
