Adding our Overview page

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -8,6 +8,13 @@
       'Helvetica Neue', sans-serif;
   }
 
+  .docs-img-centered {
+    display: block;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   body {
     margin: 0px;
   }
