--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -24,7 +24,73 @@
     sidebarHeader.innerHTML = '<h1 tabindex="0" class="css-1su1ft1">' + '<a href="https://aka.ms/mgt" target="_blank" class="css-ixbm00">' +
       'Microsoft Graph Toolkit Playground</a>' +
       '</h1>';
+    
+    addUsefulLinks();
   }
+
+  function addUsefulLinks() {
+    const linkStyle = 'color: black; text-decoration: none; text-align: center; cursor: pointer; padding-right: 0.5rem;';
+    const imageStyle = 'height: 0.75rem; margin-top: 0.125rem;';
+    const textStyle = 'margin-left: 0.25rem; font-size: 0.75rem;';
+    const linkContentStyle = 'display: flex;';
+    
+    const sidebarHeader = document.getElementsByClassName('sidebar-header');
+    if (sidebarHeader.length === 0) {
+      // sidebar container has not loaded in the page yet, retry in 500ms
+      setTimeout(addUsefulLinks, 500);
+      return false;
+    }
+
+    const sidebarNode = sidebarHeader[0].parentNode;
+
+    // GitHub
+    const githubImage = document.createElement('img');
+    githubImage.src = './github.png';
+    githubImage.style = imageStyle;
+
+    const githubText = document.createElement('span');
+    githubText.style = textStyle;
+    githubText.innerText = 'GitHub';
+
+    const repoLinkContent = document.createElement('span');
+    repoLinkContent.style = linkContentStyle;
+    repoLinkContent.append(githubImage, githubText);
+
+    const repoLink = document.createElement('a');
+    repoLink.href = 'https://aka.ms/mgt';
+    repoLink.target='_blank';
+    repoLink.style = linkStyle;
+    repoLink.appendChild(repoLinkContent);
+
+    // npm
+    const npmImage = document.createElement('img');
+    npmImage.src = './npm.png';
+    npmImage.style = imageStyle;
+
+    const npmText = document.createElement('span');
+    npmText.style = textStyle;
+    npmText.innerText = 'Npm';
+
+    const npmLinkContent = document.createElement('span');
+    npmLinkContent.style = linkContentStyle;
+    npmLinkContent.append(npmImage, npmText);
+
+    const npmLink = document.createElement('a');
+    npmLink.href = 'https://www.npmjs.com/package/@microsoft/mgt';
+    npmLink.target='_blank';
+    npmLink.style = linkStyle + ' margin-left: 0.5rem;';
+    npmLink.appendChild(npmLinkContent);
+
+    // links container
+    const usefulLinksContainer = document.createElement('div');
+    usefulLinksContainer.id = 'useful-links';
+    usefulLinksContainer.style = 'display: flex; margin: 1rem 0rem; font-size: 0.875rem;';
+
+    usefulLinksContainer.append(repoLink, npmLink);
+
+    sidebarNode.insertBefore(usefulLinksContainer, sidebarNode.childNodes[1]);
+  }
+</script>
 
 </script>
 
