--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -69,7 +69,7 @@
 
     const npmText = document.createElement('span');
     npmText.style = textStyle;
-    npmText.innerText = 'Npm';
+    npmText.innerText = 'npm';
 
     const npmLinkContent = document.createElement('span');
     npmLinkContent.style = linkContentStyle;
