--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -45,6 +45,7 @@
     // GitHub
     const githubImage = document.createElement('img');
     githubImage.src = './github.png';
+    githubImage.alt = 'GitHub';
     githubImage.style = imageStyle;
 
     const githubText = document.createElement('span');
@@ -64,6 +65,7 @@
     // npm
     const npmImage = document.createElement('img');
     npmImage.src = './npm.png';
+    npmImage.alt = 'npm';
     npmImage.style = imageStyle;
 
     const npmText = document.createElement('span');
