--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
-<link rel="manifest" href="/manifest.json" />
+<link rel="manifest" href="manifest.json" />
 <script>navigator.serviceWorker.register("sw.js")</script>
 
 <footer class="storybook-footer" >
