Update the designs for various components

--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
     <mgt-todo></mgt-todo>
+    <mgt-file-list></mgt-file-list>
   </body>
 </html>
