Fix filtering groups

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <br />
     <mgt-people-picker people-filters="jobTitle ne 'Product Manager'"> </mgt-people-picker>
     <br />
-    <mgt-people-picker group-filters="startsWith('displayName', 'Pi')" type="group"> </mgt-people-picker>
+    <mgt-people-picker group-filters="startsWith(displayName, 'a')" type="group"> </mgt-people-picker>
     <br />
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
     <!-- <mgt-people-picker
