Remove border on tabs on hover

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <mgt-mock-provider></mgt-mock-provider>
 
     <mgt-login></mgt-login>
-    <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
+    <mgt-person person-query="me" view="twoLines" person-card="click" show-presence></mgt-person>
     <mgt-people-picker></mgt-people-picker>
     <mgt-teams-channel-picker></mgt-teams-channel-picker>
     <mgt-tasks></mgt-tasks>
